--- a/1 - modified/login.html
+++ b/1 - modified/login.html
@@ -36,11 +36,7 @@
 	$(endif)
 
 	<div class="form">
-		<!--<img src="img/diamondplaza-2020.jpg" />	-->
-
-		<div class="forceColor">
-
-		</div>
+		<div class="forceColor"></div>
 		<div class="topbar">
 			<div class="noidung">
 				<img style="width: 150px" src="img/Logo.png" /><br><br>
