--- a/1/login.html
+++ b/1/login.html
@@ -2,10 +2,12 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta http-equiv="pragma" content="no-cache" />
   <meta http-equiv="expires" content="-1" />
   <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>NETNAM hotspot > login</title>
   <! # CSS & JS template ->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
@@ -49,14 +51,14 @@
                               <! username mặc định: NETNAM->
         <input name="username" type="hidden" value="NETNAM" />
         <input type="password" class="input" id="password" name="password" placeholder="Password" />
-        <button class="submit" id="submit">Login</button>
+        <button class="submit" id="submit">Login & Connect</button>
       </form>
     </div>
   </div>
 
-  <p id="NETNAM">Powered by NETNAM © 2020 - Internet Hotspot</p>
+  <div id="NETNAM">Powered by NETNAM © 2020 - Internet Hotspot</div>
   $(if error)<br />
-  <div id="NETNAM" style="color: #FF8080; font-size: 9px">$(error)</div>$(endif)
+  <div  style="color: #FF8080; font-size: 9px">$(error)</div>$(endif)
   <! # javascript của template ->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src="./js/script.js"></script>
