--- a/4/login.html
+++ b/4/login.html
@@ -1,97 +1,95 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
+
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<meta http-equiv="pragma" content="no-cache" />
-<meta http-equiv="expires" content="-1" />
-<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;"/>
-<title>internet hotspot > login</title>
-<style type="text/css">
-body {color: #737373; font-size: 10px; font-family: verdana;}
-
-textarea,input,select {
-background-color: #FDFBFB;
-border: 1px solid #BBBBBB;
-padding: 2px;
-margin: 1px;
-font-size: 14px;
-color: #808080;
-}
-
-a, a:link, a:visited, a:active { color: #AAAAAA; text-decoration: none; font-size: 10px; }
-a:hover { border-bottom: 1px dotted #c1c1c1; color: #AAAAAA; }
-img {border: none;}
-td { font-size: 14px; color: #7A7A7A; }
-</style>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta http-equiv="pragma" content="no-cache" />
+  <meta http-equiv="expires" content="-1" />
+  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;" />
+  <title>NETNAM hotspot > login</title>
+  <!-- Stylesheets -->
+  <link href="css/style.css" rel='stylesheet' type='text/css' />
+  <!-- online fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Amiri:400,400i,700,700i" rel="stylesheet">
 
 </head>
 
 <body>
-$(if chap-id)
-	<form name="sendin" action="$(link-login-only)" method="post">
-		<input type="hidden" name="username" />
-		<input type="hidden" name="password" />
-		<input type="hidden" name="dst" value="$(link-orig)" />
-		<input type="hidden" name="popup" value="true" />
-	</form>
+  $(if chap-id)
+  <form name="sendin" action="$(link-login-only)" method="post">
+    <input type="hidden" name="username" />
+    <input type="hidden" name="password" />
+    <input type="hidden" name="dst" value="$(link-orig)" />
+    <input type="hidden" name="popup" value="true" />
+  </form>
 
-	<script type="text/javascript" src="/md5.js"></script>
-	<script type="text/javascript">
-	<!--
-	    function doLogin() {
-		document.sendin.username.value = document.login.username.value;
-		document.sendin.password.value = hexMD5('$(chap-id)' + document.login.password.value + '$(chap-challenge)');
-		document.sendin.submit();
-		return false;
-	    }
-	//-->
-	</script>
-$(endif)
+  <script type="text/javascript" src="/md5.js"></script>
+  <script type="text/javascript">
+    <!--
+    function doLogin() {
+      document.sendin.username.value = document.login.username.value;
+      document.sendin.password.value = hexMD5('$(chap-id)' + document.login.password.value + '$(chap-challenge)');
+      document.sendin.submit();
+      return false;
+    }
+    addEventListener("load", function() {
+      setTimeout(hideURLbar, 0);
+    }, false);
 
-<div align="center">
-<a href="$(link-login-only)?target=lv&amp;dst=$(link-orig-esc)">Latviski</a>
-</div>
+    function hideURLbar() {
+      window.scrollTo(0, 1);
+    }
+    //
+    -->
+  </script>
+  $(endif)
 
-<table width="100%" style="margin-top: 10%;">
-	<tr>
-	<td align="center" valign="middle">
-		<div class="notice" style="color: #c1c1c1; font-size: 9px">Please log on to use the internet hotspot service<br />$(if trial == 'yes')Free trial available, <a style="color: #FF8080"href="$(link-login-only)?dst=$(link-orig-esc)&amp;username=T-$(mac-esc)">click here</a>.$(endif)</div><br />
-		<table width="280" height="280" style="border: 1px solid #cccccc; padding: 0px;" cellpadding="0" cellspacing="0">
-			<tr>
-				<td align="center" valign="bottom" height="175" colspan="2">
-					<form name="login" action="$(link-login-only)" method="post"
-					    $(if chap-id) onSubmit="return doLogin()" $(endif)>
-						<input type="hidden" name="dst" value="$(link-orig)" />
-						<input type="hidden" name="popup" value="true" />
 
-							<table width="100" style="background-color: #ffffff">
-								<tr><td align="right">login</td>
-										<td><input style="width: 80px" name="username" type="text" value="$(username)"/></td>
-								</tr>
-								<tr><td align="right">password</td>
-										<td><input style="width: 80px" name="password" type="password"/></td>
-								</tr>
-								<tr><td>&nbsp;</td>
-										<td><input type="submit" value="OK" /></td>
-								</tr>
-							</table>
-					</form>
-				</td>
-			</tr>
-			<tr><td align="center"><a href="http://www.mikrotik.com" target="_blank" style="border: none;"><img src="/img/logobottom.png" alt="mikrotik" /></a></td></tr>
-		</table>
+  <!--  particles  -->
+  <div id="particles-js"></div>
+  <!-- //particles -->
+  <div class="w3ls-pos">
+    <h1>NETNAM hotspot</h1>
+    <div class="w3ls-login box">
+      <!-- form starts here -->
+      <form name="login" action="$(link-login-only)" method="post" $(if chap-id) onSubmit="return doLogin()" $(endif)>
+        <input type="hidden" name="dst" value="$(link-orig)" />
+        <input type="hidden" name="popup" value="true" />
+        <div class="agile-field-txt">
+          <input name="username" type="text" value="$(username)" required="" />
+        </div>
+        <div class="agile-field-txt">
+          <input name="password" type="password" placeholder="******" required="" id="myInput" />
+          <div class="agile_label">
+            <input id="check3" name="check3" type="checkbox" value="show password">
+            <label class="check" for="check3">Remember me</label>
+          </div>
+        </div>
+        <div class="w3ls-bot">
+          <input type="submit" value="LOGIN">
+        </div>
+      </form>
+    </div>
+    <!-- //form ends here -->
+    <!--copyright-->
+    <div class="copy-wthree">
+      <p>Powered by NETNAM © 2020 - Internet Hotspot</p>
+    </div>
+    <!--//copyright-->
+  </div>
 
-	<br /><div style="color: #c1c1c1; font-size: 9px">Powered by MikroTik RouterOS</div>
-	$(if error)<br /><div style="color: #FF8080; font-size: 9px">$(error)</div>$(endif)
-	</td>
-	</tr>
-</table>
-
-<script type="text/javascript">
-<!--
-  document.login.username.focus();
-//-->
-</script>
+  $(if error)<br />
+  <div style="color: #FF8080; font-size: 9px">$(error)</div>$(endif)
+  <!-- scripts required  for particle effect -->
+  <script src='js/particles.min.js'></script>
+  <script src="js/index.js"></script>
+  <!-- //scripts required for particle effect -->
+  <script type="text/javascript">
+    <!--
+    document.login.username.focus();
+    //
+    -->
+  </script>
 </body>
+
 </html>
