--- a/3/login.html
+++ b/3/login.html
@@ -61,7 +61,7 @@ $(endif)
             <input type="hidden" name="dst" value="$(link-orig)" />
 						<input type="hidden" name="popup" value="true" />
   				<span class="login100-form-title p-b-37">
-  					Sign In
+  					Login <br /> to get FREE wifi
   				</span>
 
   				<div class="wrap-input100 validate-input m-b-20" data-validate="Enter username or email">
@@ -76,29 +76,19 @@ $(endif)
 
   				<div class="container-login100-form-btn">
   					<button class="login100-form-btn" type="submit" value="OK">
-  						Sign In
+  						Connect
   					</button>
   				</div>
 
   				<div class="text-center p-t-57 p-b-20">
-  					<span class="txt1">
-  						Or login with
-  					</span>
+
   				</div>
 
-  				<div class="flex-c p-b-112">
-  					<a href="#" class="login100-social-item">
-  						<i class="fa fa-facebook-f"></i>
-  					</a>
 
-  					<a href="#" class="login100-social-item">
-  						<img src="images/icons/icon-google.png" alt="GOOGLE">
-  					</a>
-  				</div>
 
   				<div class="text-center">
   					<a href="#" class="txt2 hov1">
-  						Sign Up
+  						Powered by NETNAM © 2020 <br /> Internet Hotspot
   					</a>
   				</div>
   			</form>
