--- a/5/login.html
+++ b/5/login.html
@@ -1,97 +1,82 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
+
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<meta http-equiv="pragma" content="no-cache" />
-<meta http-equiv="expires" content="-1" />
-<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;"/>
-<title>internet hotspot > login</title>
-<style type="text/css">
-body {color: #737373; font-size: 10px; font-family: verdana;}
-
-textarea,input,select {
-background-color: #FDFBFB;
-border: 1px solid #BBBBBB;
-padding: 2px;
-margin: 1px;
-font-size: 14px;
-color: #808080;
-}
-
-a, a:link, a:visited, a:active { color: #AAAAAA; text-decoration: none; font-size: 10px; }
-a:hover { border-bottom: 1px dotted #c1c1c1; color: #AAAAAA; }
-img {border: none;}
-td { font-size: 14px; color: #7A7A7A; }
-</style>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta http-equiv="pragma" content="no-cache" />
+  <meta http-equiv="expires" content="-1" />
+  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;" />
+  <title>NETNAM hotspot > login</title>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/typicons/2.0.9/typicons.min.css'>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css'>
+  <link rel="stylesheet" href="./style.css">
 
 </head>
 
 <body>
-$(if chap-id)
-	<form name="sendin" action="$(link-login-only)" method="post">
-		<input type="hidden" name="username" />
-		<input type="hidden" name="password" />
-		<input type="hidden" name="dst" value="$(link-orig)" />
-		<input type="hidden" name="popup" value="true" />
-	</form>
+  $(if chap-id)
+  <form name="sendin" action="$(link-login-only)" method="post">
+    <input type="hidden" name="username" />
+    <input type="hidden" name="password" />
+    <input type="hidden" name="dst" value="$(link-orig)" />
+    <input type="hidden" name="popup" value="true" />
+  </form>
 
-	<script type="text/javascript" src="/md5.js"></script>
-	<script type="text/javascript">
-	<!--
-	    function doLogin() {
-		document.sendin.username.value = document.login.username.value;
-		document.sendin.password.value = hexMD5('$(chap-id)' + document.login.password.value + '$(chap-challenge)');
-		document.sendin.submit();
-		return false;
-	    }
-	//-->
-	</script>
-$(endif)
+  <script type="text/javascript" src="/md5.js"></script>
+  <script type="text/javascript">
+    <!--
+    function doLogin() {
+      document.sendin.username.value = document.login.username.value;
+      document.sendin.password.value = hexMD5('$(chap-id)' + document.login.password.value + '$(chap-challenge)');
+      document.sendin.submit();
+      return false;
+    }
+    //
+    -->
+  </script>
+  $(endif)
 
-<div align="center">
-<a href="$(link-login-only)?target=lv&amp;dst=$(link-orig-esc)">Latviski</a>
-</div>
+  <!-- partial:index.partial.html -->
 
-<table width="100%" style="margin-top: 10%;">
-	<tr>
-	<td align="center" valign="middle">
-		<div class="notice" style="color: #c1c1c1; font-size: 9px">Please log on to use the internet hotspot service<br />$(if trial == 'yes')Free trial available, <a style="color: #FF8080"href="$(link-login-only)?dst=$(link-orig-esc)&amp;username=T-$(mac-esc)">click here</a>.$(endif)</div><br />
-		<table width="280" height="280" style="border: 1px solid #cccccc; padding: 0px;" cellpadding="0" cellspacing="0">
-			<tr>
-				<td align="center" valign="bottom" height="175" colspan="2">
-					<form name="login" action="$(link-login-only)" method="post"
-					    $(if chap-id) onSubmit="return doLogin()" $(endif)>
-						<input type="hidden" name="dst" value="$(link-orig)" />
-						<input type="hidden" name="popup" value="true" />
+  <body id="particles-js"></body>
+  <div class="animated bounceInDown">
+    <div class="container">
+      <span class="error animated tada" id="msg"></span>
+      <form class="box" onsubmit="return checkStuff()" name="login" action="$(link-login-only)" method="post" $(if chap-id) onSubmit="return doLogin()" $(endif)>
+        <input type="hidden" name="dst" value="$(link-orig)" />
+        <input type="hidden" name="popup" value="true" />
+        <h4>Log<span>in</span></h4>
+        <h5>to get FREE wifi.</h5>
+        <input name="username" type="text" value="$(username)" autocomplete="off">
+        <i class="typcn typcn-eye" id="eye"></i>
+        <input name="password" type="password" placeholder="Passsword" id="pwd" autocomplete="off">
+        <label>
+          <input type="checkbox">
+          <span></span>
+          <small class="rmb" style="left: 40%">I Agree to the Term & Conditions</small>
+        </label>
+        <input type="submit" value="Connect" class="btn1">
+      </form>
+    </div>
+    <div class="footer">
+      <span>Powered by NETNAM © 2020 Internet Hotspot</span>
+    </div>
+  </div>
 
-							<table width="100" style="background-color: #ffffff">
-								<tr><td align="right">login</td>
-										<td><input style="width: 80px" name="username" type="text" value="$(username)"/></td>
-								</tr>
-								<tr><td align="right">password</td>
-										<td><input style="width: 80px" name="password" type="password"/></td>
-								</tr>
-								<tr><td>&nbsp;</td>
-										<td><input type="submit" value="OK" /></td>
-								</tr>
-							</table>
-					</form>
-				</td>
-			</tr>
-			<tr><td align="center"><a href="http://www.mikrotik.com" target="_blank" style="border: none;"><img src="/img/logobottom.png" alt="mikrotik" /></a></td></tr>
-		</table>
+  $(if error)<br />
+  <div style="color: #FF8080; font-size: 9px">$(error)</div>$(endif)
 
-	<br /><div style="color: #c1c1c1; font-size: 9px">Powered by MikroTik RouterOS</div>
-	$(if error)<br /><div style="color: #FF8080; font-size: 9px">$(error)</div>$(endif)
-	</td>
-	</tr>
-</table>
 
-<script type="text/javascript">
-<!--
-  document.login.username.focus();
-//-->
-</script>
+  <script type="text/javascript">
+    <!--
+    document.login.username.focus();
+    //
+    -->
+  </script>
+  <!-- partial -->
+  <script src='https://cldup.com/S6Ptkwu_qA.js'></script>
+  <script src="./script.js"></script>
 </body>
+
 </html>
