--- a/index.html
+++ b/index.html
@@ -1305,19 +1305,18 @@
 
   </div>
   <!-- partial -->
-</div><div class="element">
+</div>
+<div class="element">
   <!-- partial:index.partial.html -->
   <h1 style="text-align: center">Animated CSS3 Buttons</h1>
   <h2 style="text-align: center">A collection of animated buttons to spice up your site</h2>
   <div class="container">
-
     <!-- Example row of columns -->
-
     <div class="row">
-      <div class="col-md-12 text-center">
+      <div class="text-center">
         <h2 class="mrng-60-top">Victoria</h2>
       </div>
-      <div class="col-md-3 col-sm-3 col-xs-6"> <a href="#V1" class="btn btn-sm animated-button victoria-one" data-effect="mfp-move-horizontal">Sign up</a> </div>
+      <a href="#V1" class="btn btn-sm animated-button victoria-one" data-effect="mfp-move-horizontal">Sign up</a>
 <div id="V1" class="white-popup mfp-with-anim mfp-hide">
         <!-- Modal content -->
         <div class="modal-content">
@@ -1332,7 +1331,7 @@
         </div>
       </div>
 
-      <div class="col-md-3 col-sm-3 col-xs-6"> <a href="#V2" class="btn btn-sm animated-button victoria-two" data-effect="mfp-move-horizontal">Login</a> </div>
+      <a href="#V2" class="btn btn-sm animated-button victoria-two" data-effect="mfp-move-horizontal">Login</a>
 <div id="V2" class="white-popup mfp-with-anim mfp-hide">
         <!-- Modal content -->
         <div class="modal-content">
@@ -1346,7 +1345,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3 col-sm-3 col-xs-6"> <a href="#V3" class="btn btn-sm animated-button victoria-three" data-effect="mfp-move-horizontal">Register</a> </div>
+      <a href="#V3" class="btn btn-sm animated-button victoria-three" data-effect="mfp-move-horizontal">Register</a>
 <div id="V3" class="white-popup mfp-with-anim mfp-hide">
         <!-- Modal content -->
         <div class="modal-content">
@@ -1361,7 +1360,7 @@
         </div>
       </div>
 
-      <div class="col-md-3 col-sm-3 col-xs-6"> <a href="#V4" class="btn btn-sm animated-button victoria-four" data-effect="mfp-move-horizontal">Learn more</a> </div>
+      <a href="#V4" class="btn btn-sm animated-button victoria-four" data-effect="mfp-move-horizontal">Learn more</a>
 <div id="V4" class="white-popup mfp-with-anim mfp-hide">
         <!-- Modal content -->
         <div class="modal-content">
@@ -1382,7 +1381,7 @@
       <div class="col-md-12 text-center">
         <h2 class="mrng-60-top">Sandy</h2>
       </div>
-      <div class="col-md-3 col-sm-3 col-xs-6"> <a href="#S1" class="btn btn-sm animated-button sandy-one" data-effect="mfp-move-horizontal">Sign up</a> </div>
+      <a href="#S1" class="btn btn-sm animated-button sandy-one" data-effect="mfp-move-horizontal">Sign up</a>
 <div id="S1" class="white-popup mfp-with-anim mfp-hide">
         <!-- Modal content -->
         <div class="modal-content">
@@ -1398,7 +1397,7 @@
       </div>
 
 
-      <div class="col-md-3 col-sm-3 col-xs-6"> <a href="#S2" class="btn btn-sm animated-button sandy-two" data-effect="mfp-move-horizontal">Login</a> </div>
+      <a href="#S2" class="btn btn-sm animated-button sandy-two" data-effect="mfp-move-horizontal">Login</a>
 <div id="S2" class="white-popup mfp-with-anim mfp-hide">
         <!-- Modal content -->
         <div class="modal-content">
@@ -1416,7 +1415,7 @@
       </div>
 
 
-      <div class="col-md-3 col-sm-3 col-xs-6"> <a href="#S3" class="btn btn-sm animated-button sandy-three" data-effect="mfp-move-horizontal">Register</a> </div>
+      <a href="#S3" class="btn btn-sm animated-button sandy-three" data-effect="mfp-move-horizontal">Register</a>
 <div id="S3" class="white-popup mfp-with-anim mfp-hide">
         <!-- Modal content -->
         <div class="modal-content">
@@ -1432,7 +1431,7 @@
       </div>
 
 
-      <div class="col-md-3 col-sm-3 col-xs-6"> <a href="#S4" class="btn btn-sm animated-button sandy-four" data-effect="mfp-move-horizontal">Learn more</a> </div>
+      <a href="#S4" class="btn btn-sm animated-button sandy-four" data-effect="mfp-move-horizontal">Learn more</a>
 <div id="S4" class="white-popup mfp-with-anim mfp-hide">
         <!-- Modal content -->
         <div class="modal-content">
@@ -1455,7 +1454,7 @@
       <div class="col-md-12 text-center">
         <h2 class="mrng-60-top">Gibson</h2>
       </div>
-      <div class="col-md-3 col-sm-3 col-xs-6"> <a href="#G1" class="btn btn-sm animated-button gibson-one" data-effect="mfp-move-horizontal">Sign up</a> </div>
+      <a href="#G1" class="btn btn-sm animated-button gibson-one" data-effect="mfp-move-horizontal">Sign up</a>
 <div id="G1" class="white-popup mfp-with-anim mfp-hide">
         <!-- Modal content -->
         <div class="modal-content">
@@ -1473,7 +1472,7 @@
       </div>
 
 
-      <div class="col-md-3 col-sm-3 col-xs-6"> <a href="#G2" class="btn btn-sm animated-button gibson-two" data-effect="mfp-move-horizontal">Login</a> </div>
+      <a href="#G2" class="btn btn-sm animated-button gibson-two" data-effect="mfp-move-horizontal">Login</a>
 <div id="G2" class="white-popup mfp-with-anim mfp-hide">
         <!-- Modal content -->
         <div class="modal-content">
@@ -1489,7 +1488,7 @@
       </div>
 
 
-      <div class="col-md-3 col-sm-3 col-xs-6"> <a href="#G3" class="btn btn-sm animated-button gibson-three" data-effect="mfp-move-horizontal">Register</a> </div>
+      <a href="#G3" class="btn btn-sm animated-button gibson-three" data-effect="mfp-move-horizontal">Register</a>
 <div id="G3" class="white-popup mfp-with-anim mfp-hide">
         <!-- Modal content -->
         <div class="modal-content">
@@ -1505,7 +1504,7 @@
       </div>
 
 
-      <div class="col-md-3 col-sm-3 col-xs-6"> <a href="#G4" class="btn btn-sm animated-button gibson-four" data-effect="mfp-move-horizontal">Learn more</a> </div>
+      <a href="#G4" class="btn btn-sm animated-button gibson-four" data-effect="mfp-move-horizontal">Learn more</a>
 <div id="G4" class="white-popup mfp-with-anim mfp-hide">
         <!-- Modal content -->
         <div class="modal-content">
@@ -1530,7 +1529,7 @@
       <div class="col-md-12 text-center">
         <h2 class="mrng-60-top">Thar</h2>
       </div>
-      <div class="col-md-3 col-sm-3 col-xs-6"> <a href="#T1" class="btn btn-sm animated-button thar-one" data-effect="mfp-move-horizontal">Sign up</a> </div>
+      <a href="#T1" class="btn btn-sm animated-button thar-one" data-effect="mfp-move-horizontal">Sign up</a>
 <div id="T1" class="white-popup mfp-with-anim mfp-hide">
         <!-- Modal content -->
         <div class="modal-content">
@@ -1548,7 +1547,7 @@
       </div>
 
 
-      <div class="col-md-3 col-sm-3 col-xs-6"> <a href="#T2" class="btn btn-sm animated-button thar-two" data-effect="mfp-move-horizontal">Login</a> </div>
+      <a href="#T2" class="btn btn-sm animated-button thar-two" data-effect="mfp-move-horizontal">Login</a>
 <div id="T2" class="white-popup mfp-with-anim mfp-hide">
         <!-- Modal content -->
         <div class="modal-content">
@@ -1564,7 +1563,7 @@
       </div>
 
 
-      <div class="col-md-3 col-sm-3 col-xs-6"> <a href="#T3" class="btn btn-sm animated-button thar-three" data-effect="mfp-move-horizontal">Register</a> </div>
+      <a href="#T3" class="btn btn-sm animated-button thar-three" data-effect="mfp-move-horizontal">Register</a>
 <div id="T3" class="white-popup mfp-with-anim mfp-hide">
         <!-- Modal content -->
         <div class="modal-content">
@@ -1580,7 +1579,7 @@
       </div>
 
 
-      <div class="col-md-3 col-sm-3 col-xs-6"> <a href="#T4" class="btn btn-sm animated-button thar-four" data-effect="mfp-move-horizontal">Learn more</a> </div>
+      <a href="#T4" class="btn btn-sm animated-button thar-four" data-effect="mfp-move-horizontal">Learn more</a>
 <div id="T4" class="white-popup mfp-with-anim mfp-hide">
         <!-- Modal content -->
         <div class="modal-content">
@@ -1598,8 +1597,8 @@
 
     </div>
   </div>
-    </div>
-    </div>
+</div>
+</div>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
