--- a/index.html
+++ b/index.html
@@ -1347,9 +1347,33 @@
         </div>
         <div class="modal-body">
   <br />Copy & paste the HTML code<br /><br />
-          <textarea></textarea>
+          <textarea><button class="fill">Fill In</button></textarea>
   <br /><br /><br />Copy & paste the CSS code<br /><br />
-          <textarea></textarea>
+          <textarea>  button {
+    color: var(--color);
+    -webkit-transition: 0.25s;
+    transition: 0.25s;
+  }
+  button:hover, button:focus {
+    border-color: var(--hover);
+    color: #fff;
+  }
+  button {
+    background: none;
+    border: 2px solid;
+    font: inherit;
+    line-height: 1;
+    margin: 0.5em;
+    padding: 1em 2em;
+  }
+  .fill {
+    --color: #a972cb;
+    --hover: #cb72aa;
+  }
+  .fill:hover,
+  .fill:focus {
+    box-shadow: inset 0 0 0 2em var(--hover);
+  }</textarea>
         </div>
       </div>
 
@@ -1362,8 +1386,46 @@
         <div class="modal-header">
                     <h2>Get the code</h2>
         </div>
-        <div class="modal-body">  <br />Copy & paste the HTML code<br /><br />           <textarea></textarea>
-  <br /><br /><br />Copy & paste the CSS code<br /><br />           <textarea></textarea>
+        <div class="modal-body">  <br />Copy & paste the HTML code<br /><br />           <textarea><button class="pulse">Pulse</button></textarea>
+  <br /><br /><br />Copy & paste the CSS code<br /><br />           <textarea>  button {
+    color: var(--color);
+    -webkit-transition: 0.25s;
+    transition: 0.25s;
+  }
+  button:hover, button:focus {
+    border-color: var(--hover);
+    color: #fff;
+  }
+  button {
+    background: none;
+    border: 2px solid;
+    font: inherit;
+    line-height: 1;
+    margin: 0.5em;
+    padding: 1em 2em;
+  }
+  .pulse {
+    --color: #ef6eae;
+    --hover: #ef8f6e;
+  }
+  .pulse:hover,
+  .pulse:focus {
+    -webkit-animation: pulse 1s;
+            animation: pulse 1s;
+    box-shadow: 0 0 0 2em rgba(255, 255, 255, 0);
+  }
+
+  @-webkit-keyframes pulse {
+    0% {
+      box-shadow: 0 0 0 0 var(--hover);
+    }
+  }
+
+  @keyframes pulse {
+    0% {
+      box-shadow: 0 0 0 0 var(--hover);
+    }
+  }</textarea>
         </div>
       </div>
     </div>
@@ -1375,8 +1437,32 @@
         <div class="modal-header">
                     <h2>Get the code</h2>
         </div>
-        <div class="modal-body">  <br />Copy & paste the HTML code<br /><br />           <textarea></textarea>
-  <br /><br /><br />Copy & paste the CSS code<br /><br />           <textarea></textarea>
+        <div class="modal-body">  <br />Copy & paste the HTML code<br /><br />           <textarea><button class="close">Close</button></textarea>
+  <br /><br /><br />Copy & paste the CSS code<br /><br />           <textarea>  button {
+    color: var(--color);
+    -webkit-transition: 0.25s;
+    transition: 0.25s;
+  }
+  button:hover, button:focus {
+    border-color: var(--hover);
+    color: #fff;
+  }
+  button {
+    background: none;
+    border: 2px solid;
+    font: inherit;
+    line-height: 1;
+    margin: 0.5em;
+    padding: 1em 2em;
+  }
+  .close {
+    --color: #ff7f82;
+    --hover: #ffdc7f;
+  }
+  .close:hover,
+  .close:focus {
+    box-shadow: inset -3.5em 0 0 0 var(--hover), inset 3.5em 0 0 0 var(--hover);
+  }</textarea>
         </div>
       </div>
     </div>
@@ -1388,8 +1474,34 @@
         <div class="modal-header">
                     <h2>Get the code</h2>
         </div>
-        <div class="modal-body">  <br />Copy & paste the HTML code<br /><br />           <textarea></textarea>
-  <br /><br /><br />Copy & paste the CSS code<br /><br />           <textarea></textarea>
+        <div class="modal-body">  <br />Copy & paste the HTML code<br /><br />           <textarea><button class="raise">Raise</button></textarea>
+  <br /><br /><br />Copy & paste the CSS code<br /><br />           <textarea>  button {
+    color: var(--color);
+    -webkit-transition: 0.25s;
+    transition: 0.25s;
+  }
+  button:hover, button:focus {
+    border-color: var(--hover);
+    color: #fff;
+  }
+  button {
+    background: none;
+    border: 2px solid;
+    font: inherit;
+    line-height: 1;
+    margin: 0.5em;
+    padding: 1em 2em;
+  }
+  .raise:hover,
+  .raise:focus {
+    box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
+    -webkit-transform: translateY(-0.25em);
+            transform: translateY(-0.25em);
+  }
+  .raise {
+    --color: #ffa260;
+    --hover: #e5ff60;
+  }</textarea>
         </div>
       </div>
     </div>
@@ -1401,8 +1513,32 @@
         <div class="modal-header">
                     <h2>Get the code</h2>
         </div>
-        <div class="modal-body">  <br />Copy & paste the HTML code<br /><br />           <textarea></textarea>
-  <br /><br /><br />Copy & paste the CSS code<br /><br />           <textarea></textarea>
+        <div class="modal-body">  <br />Copy & paste the HTML code<br /><br />           <textarea><button class="up">Fill Up</button></textarea>
+  <br /><br /><br />Copy & paste the CSS code<br /><br />           <textarea>  button {
+    color: var(--color);
+    -webkit-transition: 0.25s;
+    transition: 0.25s;
+  }
+  button:hover, button:focus {
+    border-color: var(--hover);
+    color: #fff;
+  }
+  button {
+    background: none;
+    border: 2px solid;
+    font: inherit;
+    line-height: 1;
+    margin: 0.5em;
+    padding: 1em 2em;
+  }
+  .up {
+    --color: #e4cb58;
+    --hover: #94e458;
+  }
+  .up:hover,
+  .up:focus {
+    box-shadow: inset 0 -3.25em 0 0 var(--hover);
+  }</textarea>
         </div>
       </div>
     </div>
@@ -1414,8 +1550,32 @@
         <div class="modal-header">
                     <h2>Get the code</h2>
         </div>
-        <div class="modal-body">  <br />Copy & paste the HTML code<br /><br />           <textarea></textarea>
-  <br /><br /><br />Copy & paste the CSS code<br /><br />           <textarea></textarea>
+        <div class="modal-body">  <br />Copy & paste the HTML code<br /><br />           <textarea><button class="slide">Slide</button></textarea>
+  <br /><br /><br />Copy & paste the CSS code<br /><br />           <textarea>  button {
+    color: var(--color);
+    -webkit-transition: 0.25s;
+    transition: 0.25s;
+  }
+  button:hover, button:focus {
+    border-color: var(--hover);
+    color: #fff;
+  }
+  button {
+    background: none;
+    border: 2px solid;
+    font: inherit;
+    line-height: 1;
+    margin: 0.5em;
+    padding: 1em 2em;
+  }
+  .slide:hover,
+  .slide:focus {
+    box-shadow: inset 6.5em 0 0 0 var(--hover);
+  }
+  .slide {
+    --color: #8fc866;
+    --hover: #66c887;
+  }</textarea>
         </div>
       </div>
     </div>
@@ -1427,8 +1587,34 @@
         <div class="modal-header">
                     <h2>Get the code</h2>
         </div>
-        <div class="modal-body">  <br />Copy & paste the HTML code<br /><br />           <textarea></textarea>
-  <br /><br /><br />Copy & paste the CSS code<br /><br />           <textarea></textarea>
+        <div class="modal-body">  <br />Copy & paste the HTML code<br /><br />           <textarea><button class="offset">Offset</button></textarea>
+  <br /><br /><br />Copy & paste the CSS code<br /><br />           <textarea>  button {
+    color: var(--color);
+    -webkit-transition: 0.25s;
+    transition: 0.25s;
+  }
+  button:hover, button:focus {
+    border-color: var(--hover);
+    color: #fff;
+  }
+  button {
+    background: none;
+    border: 2px solid;
+    font: inherit;
+    line-height: 1;
+    margin: 0.5em;
+    padding: 1em 2em;
+  }
+  .offset {
+    --color: #19bc8b;
+    --hover: #1973bc;
+  }
+  .offset {
+    box-shadow: 0.3em 0.3em 0 0 var(--color), inset 0.3em 0.3em 0 0 var(--color);
+  }
+  .offset:hover, .offset:focus {
+    box-shadow: 0 0 0 0 var(--hover), inset 6em 3.5em 0 0 var(--hover);
+  }</textarea>
         </div>
       </div>
     </div>
